--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
          <p>LaunchX</p>
     </header>
     <section>
-        <p>Vamos a buscar al Pokemon</p>
-        <input type="text" placeholder="pikachu" id="pokeName" name="pokeName">
-        <button onclick="fetchPokemon()">Busquemos</button><br>
+        <h2>Vamos a buscar al Pokemon</h2>
+        <input type="text" placeholder="pikachu" id="pokeName" name="pokeName"><br>
         <img class="pokemon" src="./img/pokeball.png" alt="Pokemon" id="pokeImg" width="100px">
-        <img class="stats" src="./img/stats.gif" alt="Pokemon" id="pokeStats" width="100px"> 
-        <img class="poke" src="./img/pokedeex1.png" alt="pokedeex" width="180px">
+        <img class="shiny" src="./img/pokeball.png" alt="Pokemon2" id="pokeImg2" width="100px"> 
+        <img class="poke" src="./img/pokedeex1.png" alt="pokedeex" width="180px"><br>
+        <button class="bot" onclick="fetchPokemon()"></button><br>
+        <button class="botTab" onclick=""></button><br>
+        <input class="typ" type="text"id="typ" name="type" readonly value="">
+        <input class="typ2" type="text" id="typ2" name="type2" readonly value="">
     </section>
+    <h2>ESTADISTICAS BASE</h2>
     </body>
 <footer>
     <script src="./POKEDEX.js"></script>
