--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <button class="botTab" onclick=""></button><br>
         <input class="typ" type="text"id="typ" name="type" readonly value="">
         <input class="typ2" type="text" id="typ2" name="type2" readonly value="">
+        <input class="nme1" type="text" id="nme" name="nme" readonly value="">
     </section>
     <h2>ESTADISTICAS BASE</h2>
     </body>
