--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     
 </head>
 <body>
-    <header>
-         <h1><img src="./img/pokedeex.png" alt="logo" width="200px"></h1>
-         <p>LaunchX</p>
-    </header>
+    <h1><img src="./img/pokedeex.png" alt="logo" width="800px"></h1>
+    <h1>LaunchX</h1><br>
+    <a href="./POKEDEX.html"><input class="bt" type="button" value="IR A LA POKEDEX"></a>
     </body>
 </html>
