--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1><img src="./img/pokedeex.png" alt="logo" width="800px"></h1>
     <h1>LaunchX</h1><br>
-    <a href="./POKEDEX.html"><input class="bt" type="button" value="IR A LA POKEDEX"></a>
+    <a href="./POKEDEX.html"><input class="bt" type="button" value="IR A LA POKEDEX"></a><br>
+    <img src="./img/cel.gif" alt="infoCel">
     </body>
 </html>
