--- a/POKEDEX.html
+++ b/POKEDEX.html
@@ -15,7 +15,7 @@
     </header>
     <section>
         <h2>Vamos a buscar al Pokemon</h2>
-        <input type="text" placeholder="pikachu" id="pokeName" name="pokeName"><br>
+        <input class="bus" type="text" placeholder="pikachu" id="pokeName" name="pokeName"><br>
         <img class="pokemon" src="./img/pokeball.png" alt="Pokemon" id="pokeImg" width="100px">
         <img class="shiny" src="./img/pokeball.png" alt="Pokemon2" id="pokeImg2" width="100px"> 
         <img class="poke" src="./img/pokedeex1.png" alt="pokedeex" width="180px"><br>
