--- a/POKEDEX.html
+++ b/POKEDEX.html
@@ -19,14 +19,14 @@
         <img class="pokemon" src="./img/pokeball.png" alt="Pokemon" id="pokeImg" width="100px">
         <img class="shiny" src="./img/pokeball.png" alt="Pokemon2" id="pokeImg2" width="100px"> 
         <img class="poke" src="./img/pokedeex1.png" alt="pokedeex" width="180px"><br>
-        <button class="bot" onclick="fetchPokemon()"></button><br>
-        <button class="botTab" onclick=""></button><br>
+        <button class="bot" onclick="fetchPokemon(), fetchtab()"></button><br>
         <input class="typ" type="text"id="typ" name="type" readonly value="">
         <input class="typ2" type="text" id="typ2" name="type2" readonly value="">
         <input class="nme1" type="text" id="nme" name="nme" readonly value="">
     </section>
     <h2>ESTADISTICAS BASE</h2>
-    </body>
+    <table id="tab"></table>
+</body>
 <footer>
     <script src="./POKEDEX.js"></script>
 </footer>
