--- a/POKEDEX.html
+++ b/POKEDEX.html
@@ -23,9 +23,11 @@
         <input class="typ" type="text"id="typ" name="type" readonly value="">
         <input class="typ2" type="text" id="typ2" name="type2" readonly value="">
         <input class="nme1" type="text" id="nme" name="nme" readonly value="">
+        <!--<div>
+            <h3>Estadisticas Base</h3>
+            <p id="datos"></p>
+        </div>-->
     </section>
-    <h2>ESTADISTICAS BASE</h2>
-    <table id="tab"></table>
 </body>
 <footer>
     <script src="./POKEDEX.js"></script>
