--- a/POKEDEX.html
+++ b/POKEDEX.html
@@ -12,7 +12,7 @@
     <header>
          <h1><img src="./img/pokedeex.png" alt="logo" width="200px"></h1>
          <p>LaunchX</p>
-    </header>
+    </header><hr>
     <section>
         <h2>Vamos a buscar al Pokemon</h2>
         <input class="bus" type="text" placeholder="pikachu" id="pokeName" name="pokeName"><br>
@@ -33,7 +33,12 @@
             <h3>Posibles movimientos</h3>
             <p class="muv" id="movimientos"></p>
         </div>
-    </section>
+    </section><hr>
+    <footer>
+        <h3>Pokedex creada</h3>
+        <p>By Axel Hiram Cisnderos Fabila</p>
+        <a href="https://github.com/axelcisneros"><img class="logo" src="./img/gitlogo.png" alt="github"></a>
+    </footer>
 </body>
 <footer>
     <script src="./POKEDEX.js"></script>
