--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <h1><img src="./img/pokedeex.png" alt="logo" width="800px"></h1>
     <h1>LaunchX</h1><br>
     <a href="./POKEDEX.html"><input class="bt" type="button" value="IR A LA POKEDEX"></a><br>
-    <img src="./img/cel.gif" alt="infoCel">
+    <img src="./img/cel.gif" alt="infoCel"><hr>
+    <footer>
+        <h3>Pokedex creada</h3>
+        <p>By Axel Hiram Cisnderos Fabila</p>
+        <a href="https://github.com/axelcisneros"><img class="logo" src="./img/gitlogo.png" alt="github"></a>
+    </footer>
     </body>
 </html>
