--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1><img src="./img/pokedeex.png" alt="logo" width="800px"></h1>
     <h1>LaunchX</h1><br>
-    <a href="./POKEDEX.html"><input class="bt" type="button" value="IR A LA POKEDEX"></a><br>
+    <a href="./instructivo.html"><input class="bt" type="button" value="IR A LA POKEDEX"></a><br>
     <img src="./img/cel.gif" alt="infoCel"><hr>
     <footer>
         <h3>Pokedex creada</h3>
